--- a/styles.css
+++ b/styles.css
@@ -12,7 +12,7 @@ nav{
     align-items: center;
     justify-content: space-between;
     flex-wrap: wrap;
-    background-color: #3e3c3c;
+    background-color: #262626;
 }
 .logo{
     width: 300px;
@@ -23,12 +23,12 @@ nav{
 nav ul li{
     display: inline-block;
     list-style: none;
-    margin: 30px 10px;
+    margin: 30px 20px;
     
 }
 nav ul li a{
     color:#f0f8ff;
-    font-size: 24px;
+    font-size: 20px;
     text-decoration: none;
     position: relative;
 }
@@ -38,4 +38,52 @@ nav ul a{
     margin: 0px 10px;
     color: #f5f5f5;
     display: inline-block;
+}
+nav ul li a::after{
+    content: '';
+    width: 0px;
+    height: 3px;
+    background:#ff004f;
+    position: absolute;
+    left: 0;
+    bottom: -6px;
+    transition: 0.5s;
+
+
+}
+nav ul li a:hover::after{
+    width: 70px;
+
+}
+#new1{
+    border: 10px solid rgba(0, 255, 200, 0)
+    
+}
+.introduction{
+    font-size: 20px;
+    color: #ff004f;
+
+}
+.content{
+    font-size: 30px;
+    color:aquamarine;
+}
+
+.copyright{
+    width: 100%;
+    text-align: center;
+    padding: 10px;
+    background: #262626;
+    font-weight: 300;
+    position: fixed;
+    left: 0;
+    bottom: 0;
+
+}
+.copyright p{
+    font-size: 20px;
+    color: #f5f5f5;
+}
+.copyright i{
+    color: #ff004f;
 }
