--- a/styles.css
+++ b/styles.css
@@ -5,12 +5,18 @@
     
 }
 body{
-    background-image: url(images/2061093.jpg);
+  background-image:url(images/cyber1.jpg);
+  background-repeat: no-repeat;
+  background-attachment: fixed; 
+  background-size: 100% 120%;
+}
+.backgroud{
+    background-size: cover;
 }
 nav{
     display: flex;
     align-items: center;
-    justify-content: space-between;
+    justify-content:space-between;
     flex-wrap: wrap;
     background-color: #262626;
 }
@@ -18,12 +24,12 @@ nav{
     width: 300px;
     font-size: 30px;
     color: #f0f8ff;
-
+    
 }
 nav ul li{
     display: inline-block;
     list-style: none;
-    margin: 30px 20px;
+    margin: 12px 20px;
     
 }
 nav ul li a{
@@ -43,7 +49,7 @@ nav ul li a::after{
     content: '';
     width: 0px;
     height: 3px;
-    background:#ff004f;
+    background:#adff2f;
     position: absolute;
     left: 0;
     bottom: -6px;
@@ -59,20 +65,22 @@ nav ul li a:hover::after{
 }
 .introduction{
     font-size: 20px;
-    color: #ff004f;
+    color: #000;
 
 }
 .content{
     font-size: 30px;
-    color:aquamarine;
+    color: #000;;
 }
 
 .copyright{
     width: 100%;
-    text-align: center;
-    padding: 10px;
+    text-align:center;
+    display: flex;
+    justify-content: space-around;
+    padding: 5px;
     background: #262626;
-    font-weight: 300;
+    font-weight: 30;
     position: fixed;
     left: 0;
     bottom: 0;
@@ -83,5 +91,24 @@ nav ul li a:hover::after{
     color: #f5f5f5;
 }
 .copyright i{
-    color: #ff004f;
+    color: #adff2f;
+}
+.btn1{
+    text-decoration: none;
+    text-align: center;
+    display: inline-block;
+    margin: 3px;
+    width: 100px;
+    float: right;
+    border-radius: 12px;
+    padding: 1px 24px;
+    transition: 0.5s;
+    background-color: #adff2f;
+    border: 2px;
+    border-color: none;
+
+}
+.btn1:hover{
+    background-color: #f5f5f5;
+
 }
