--- a/styles.css
+++ b/styles.css
@@ -107,9 +107,12 @@ nav ul li a:hover::after{
     background-color: #adff2f;
     border: 2px;
     border-color: none;
+    cursor: pointer;
 
 }
 .btn1:hover{
     background-color: #f5f5f5;
 
 }
+
+
